Premiere version exploitable ... a checker null pointer date

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -239,7 +239,7 @@
       <mat-card-title>Modifier location</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form [formGroup]="newRentForm" (submit)="updateRent(rent.id)">
+      <form [formGroup]="newRentForm" (submit)="updateRent(rent)">
         <div>
           <mat-form-field>
             <mat-label>Appartement</mat-label>
